--- a/_posts/2025-08-10-station-3310.md
+++ b/_posts/2025-08-10-station-3310.md
@@ -36,3 +36,7 @@ The messages are structured as follows:
 - [Generated OTP](https://storage.googleapis.com/rexchoppers-website-assets/station-3310/otp.pdf)
 - [Full Broadcast](https://storage.googleapis.com/rexchoppers-website-assets/station-3310/broadcast-full.mp3)
 
+![Pad View](https://storage.googleapis.com/rexchoppers-website-assets/station-3310/pad-view.png "Pad View")
+
+![Decode Window](https://storage.googleapis.com/rexchoppers-website-assets/station-3310/decode-window.png "Decode Window")
+
