--- a/_posts/2025-08-10-station-3310.md
+++ b/_posts/2025-08-10-station-3310.md
@@ -15,7 +15,7 @@ Example number stations:
 - [The Buzzer UVB-76](https://www.youtube.com/watch?v=SIAbtLmKoZE)
 - [The Swedish Rhapsody](https://www.youtube.com/watch?v=dXziS-GpPOo)
 
-As a fun side project, I've delved into the world of cryptography and developed Station 3310 (From the Nokia 3310)
+As a fun side project, I've delved into the world of cryptography and developed Station 3310.
 
 - [Github Repository](https://github.com/rexchoppers/station-3310)
 
